# gmoney_store

./: .gitignore  pyproject.toml
backend/batch/: .env  Dockerfile  main.py  requirements.txt
