[tool.poetry]
name = "gmoney-store"
version = "0.1.0"
description = ""
authors = ["Sungmin Lee <sungmin9036@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
dotenv = "^0.9.9"
asyncio = "^3.4.3"
aiohttp = "^3.11.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
